# quantitative-finance-projects

./: .env.example  .gitignore  README.md  download_data.py  momentum_strategy.py  pyproject.toml
data/: ff3_monthly.parquet  macro.parquet  returns_monthly.parquet  shares_monthly.parquet
fundamental-analysis/: DSV Financial details 2020-2025.xlsx  DSV_Fundamental_Analysis.ipynb  data_preprocessing.py  fundamental-analysis-dsv.py  fundamental_functions.py
live-taa/: 122.py  live_taa_crypto.py
live-taa/results/live_crypto_taa/: signal_log.csv
momentum_strategy/: README.md  momentum_strategy.py
results/: momentum_summary.csv
saa_taa/: README.html  README.md
