[project]
name = "aef-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext>=1.3.0",
    "alpaca-py>=0.43.4",
    "arch>=8.0.0",
    "datetime>=6.0",
    "fredapi>=0.5.2",
    "great-tables>=0.20.0",
    "ipython>=9.9.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "mizani>=0.14.3",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "plotnine>=0.15.2",
    "py7zr>=1.1.0",
    "pyfixest>=0.40.0",
    "regtabletotext>=0.0.12",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tidyfinance>=0.2.5",
    "tqdm>=4.68.2",
    "yfinance>=1.4.1",
]
